tests/neg/cycles.scala
class Foo[T <: U, U <: T]

class Bar[T >: T]

